# Sj_Django4_Vue3_Pytest

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: publish-to-pypi.yaml
Sj_Django/: asgi.py  settings.py  urls.py  wsgi.py
Sj_app1/: admin.py  apps.py  models.py  urls.py  views.py
Sj_app1/migrations/: 0001_initial.py  0002_alter_feedback_comment.py
Sj_app2/: admin.py  apps.py  models.py
Sj_app2/migrations/: 0001_initial.py  0002_alter_testtask_id.py  0003_rename_updaate_time_testtask_update_time_and_more.py
case/: admin.py  models.py
case/migrations/: 0001_initial.py
resource/feedback/: result.html  submit.html
resource/html/: submit.html
test/: cli.py  manage.py  req.py  test_ini.py
