[project]
name = "Sj-Django-Vue3-Pytest"
version = "0.1.2"
description = "Default template for PDM package"
authors = [
    {name = "ajianbest6", email = "3036474507@qq.com"},
]
dependencies = ["pytest>=8.4.2", "click>=8.3.0", "requests>=2.32.5", "django>=5.2.6"]
requires-python = ">=3.10"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[project.entry-points.pytest11]
result_log = "Sj_Django_Vue3_Pytest.plugin"

# 开发者模式
[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.0.1",
    "flake8>=7.3.0",
]

[tool.black]
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.tox
  | .venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

# pdm 脚本
[tool.pdm.scripts]
check = { composite = [
    "isort .",
    "black .",
    "flake8 ."
] }

test = "pytest"

# 打包编译地址
[tool.pdm.build]
package-dir = "src"
